タイトル、管理項目へ戻るボタン

--- a/Django_Docker/toolkeeper_app/templates/history_list.html
+++ b/Django_Docker/toolkeeper_app/templates/history_list.html
@@ -97,6 +97,12 @@
                 </ul>
             </div>
             {% endif %}
+
+            <div class="d-grid mt-3">
+                <button class="btn btn-lg btn-2 d-grid">
+                    <a class="nav-link" href="{% url 'toolkeeper_app:asset_list' %}">管理項目一覧に戻る</a>
+                </button>
+            </div>
         </div>
     </div>
 </section>
