--- a/Django_Docker/toolkeeper_app/templates/asset_list.html
+++ b/Django_Docker/toolkeeper_app/templates/asset_list.html
@@ -11,6 +11,9 @@
 <!-- Section-->
 <section class="py-5">
     <div class="container px-4 px-lg-5 mt-3">
+        <div class="text-center mb-3">
+            <h2>管理項目一覧</h2>
+        </div>
         <div class="row d-flex justify-content-end mb-4">
             <button class="col-auto learn-more">
                 <span class="circle" aria-hidden="true">
