--- a/Django_Docker/toolkeeper_app/templates/group_list.html
+++ b/Django_Docker/toolkeeper_app/templates/group_list.html
@@ -15,7 +15,7 @@
                 <hr>
             </div>
             <div class="row gx-5 justify-content-center">
-                <div class="col-lg-8 col-xl-6">
+                <div class="col-lg-9 col-xxl-8">
                     <p class="row justify-content-center lead fw-normal text-muted text-center mb-3" style="font-size: 15px;">
                         <span class="col-auto px-0">グループ名をクリックすると、</span>
                         <span class="col-auto px-0">詳細画面へ移ります</span>
