--- a/Django_Docker/toolkeeper_app/templates/group_detail.html
+++ b/Django_Docker/toolkeeper_app/templates/group_detail.html
@@ -12,9 +12,9 @@
         <div class="bg-light rounded-3 py-5 px-5 mb-3">
             <div class="row">
                 <div class="d-grid mb-5">
-                    <h2 class="">
+                    <h2>
                         <u>{{ group.group_name }}
-                            <span class="fs-5">
+                            <span class="d-inline-block fs-4 mt-2">
                                 （ホスト：{% if group.user == request.user %}あなた{% else %}{{ group.user.username }}{% endif %}）
                             </span>
                         </u>
