--- a/Django_Docker/toolkeeper_app/templates/history_list.html
+++ b/Django_Docker/toolkeeper_app/templates/history_list.html
@@ -20,14 +20,14 @@
         </div>
         <form method="get">
             <div class="mb-3">
-                <div class="row row-cols-1 row-cols-md-3 row-cols-lg-4">
+                <div class="row row-cols-1 row-cols-md-3">
                     <div class="col mt-2 mt-md-auto">{{ group_filter_form }}</div>
                     <div class="col mt-2 mt-md-auto">{{ user_filter_form }}</div>
                     <div class="col mt-2 mt-md-auto">{{ asset_filter_form }}</div>
-                    <div class="col mt-3 mt-lg-auto">{{ search_form }}</div>
+                    <!-- <div class="col mt-3 mt-lg-auto">{{ search_form }}</div> -->
                     <!-- <button type="button" class="col mt-2 mt-md-auto btn btn-secondary" style="width: 60px; height: 38px;" onclick="clearFilters()"><i class="bi bi-arrow-clockwise"></i></button> -->
                 </div>
-                <div class="row row-cols-1 row-cols-md-3 row-cols-lg-4">
+                <div class="row row-cols-1 row-cols-md-3">
                     <div class="col mt-3">{{ sort_form }}</div>
                     <!-- <div class="col mt-3">{{ search_form }}</div> -->
                     <!-- <button type="button" class="col mt-2 mt-md-auto btn btn-secondary" style="width: 60px; height: 38px;" onclick="clearSearch()"><i class="bi bi-arrow-clockwise"></i></button> -->
