--- a/Django_Docker/toolkeeper_app/templates/group_list.html
+++ b/Django_Docker/toolkeeper_app/templates/group_list.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}グループ作成 | ToolKeeper{% endblock %}
+{% block title %}グループ一覧 | ToolKeeper{% endblock %}
 
 {% block active_group_list %}active{% endblock %}
 
