--- a/Django_Docker/toolkeeper_app/templates/item_add.html
+++ b/Django_Docker/toolkeeper_app/templates/item_add.html
@@ -19,10 +19,6 @@
             <div class="col-11 col-sm-8 h-100" style="position: relative;">
                 <canvas id="canvas" style="width: 100%; height: auto;"></canvas>
                 <img id="image" src="{{ image.url }}" width="{{ image.width }}" height="{{ image.height }}" style="display: none;"/>
-                <span id="box_x_min" style="display: none;">{{ box_x_min }}</span>
-                <span id="box_y_min" style="display: none;">{{ box_y_min }}</span>
-                <span id="box_x_max" style="display: none;">{{ box_x_max }}</span>
-                <span id="box_y_max" style="display: none;">{{ box_y_max }}</span>
             </div>
 
             <div class="col-11 col-sm-4 mt-3 mt-sm-0">
@@ -57,10 +53,10 @@
     const canvas = document.getElementById("canvas");
     const ctx = canvas.getContext("2d");
     const image = document.getElementById("image");
-    const box_x_min = Number(document.getElementById("box_x_min").innerText);
-    const box_y_min = Number(document.getElementById("box_y_min").innerText);
-    const box_x_max = Number(document.getElementById("box_x_max").innerText);
-    const box_y_max = Number(document.getElementById("box_y_max").innerText);
+    // const box_x_min = Number(document.getElementById("box_x_min").innerText);
+    // const box_y_min = Number(document.getElementById("box_y_min").innerText);
+    // const box_x_max = Number(document.getElementById("box_x_max").innerText);
+    // const box_y_max = Number(document.getElementById("box_y_max").innerText);
 
     const form = document.getElementById("form");
     const formset = document.getElementById("formset");
@@ -70,15 +66,18 @@
     // 画像の読み込みが完了したらキャンバスに描画
     image.onload = () => {
         // キャンバスのサイズを設定し、画像を描画
-        canvas.width = box_x_max - box_x_min;
-        canvas.height = box_y_max - box_y_min;
-        ctx.drawImage(image, box_x_min, box_y_min, canvas.width, canvas.height, 0, 0, canvas.width, canvas.height);
+        canvas.width = image.width;
+        canvas.height = image.height;
+        ctx.drawImage(image, 0, 0);
+        // canvas.width = box_x_max - box_x_min;
+        // canvas.height = box_y_max - box_y_min;
+        // ctx.drawImage(image, box_x_min, box_y_min, canvas.width, canvas.height, 0, 0, canvas.width, canvas.height);
 
         // デバッグ情報をコンソールに出力
-        console.log("box_x_min: " + box_x_min);
-        console.log("box_y_min: " + box_y_min);
-        console.log("box_x_max: " + box_x_max);
-        console.log("box_y_max: " + box_y_max);
+        // console.log("box_x_min: " + box_x_min);
+        // console.log("box_y_min: " + box_y_min);
+        // console.log("box_x_max: " + box_x_max);
+        // console.log("box_y_max: " + box_y_max);
 
         console.log("canvas.width: " + canvas.width);
         console.log("canvas.height: " + canvas.height);
