--- a/Django_Docker/toolkeeper_app/templates/4index.html
+++ b/Django_Docker/toolkeeper_app/templates/4index.html
@@ -44,7 +44,7 @@
         <input type="button" id="del" value="削除" onclick="del_box();">
     </div>
 
-    <img id="image" src="../../media/movie/MOV_0144.jpg" alt="Image" style="visibility: hidden;"/>
+    <img id="image" src="../../media/image/IMG_2802_EMV6aJR.jpg" alt="Image" style="visibility: hidden;"/>
 
     <script>
         // キャンバスとコンテキストを取得
